[gd_scene load_steps=8 format=3 uid="uid://c5iknbtcn5etf"]

[ext_resource type="Script" path="res://game/game.gd" id="1_7bnle"]
[ext_resource type="Texture2D" uid="uid://dbcrwkj8v3rka" path="res://icon.svg" id="2_qexsu"]
[ext_resource type="Script" path="res://game/CameraFollow.gd" id="3_3s4u8"]
[ext_resource type="Script" path="res://player/hurtbox.gd" id="4_2irw5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wd8dc"]
texture = ExtResource("2_qexsu")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_ep752"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wd8dc")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d2w1s"]

[node name="Game" type="Node2D"]
script = ExtResource("1_7bnle")

[node name="Network" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player.tscn", "res://player/hurtbox.tscn")
spawn_path = NodePath("../Network")

[node name="MasterPopup" type="Window" parent="."]
process_mode = 3
initial_position = 1
title = "Master"
size = Vector2i(640, 480)
visible = false
borderless = true

[node name="CenterContainer" type="CenterContainer" parent="MasterPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 476.0

[node name="VBoxContainer" type="VBoxContainer" parent="MasterPopup/CenterContainer"]
layout_mode = 2

[node name="Host" type="LineEdit" parent="MasterPopup/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "localhost"
placeholder_text = "Host"

[node name="JoinServer" type="Button" parent="MasterPopup/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="HSeparator" type="HSeparator" parent="MasterPopup/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateServer" type="Button" parent="MasterPopup/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Create Server"

[node name="Spawns" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="Spawns"]
position = Vector2(-643, -250)

[node name="Marker2D2" type="Marker2D" parent="Spawns"]
position = Vector2(646, -244)

[node name="Marker2D3" type="Marker2D" parent="Spawns"]
position = Vector2(0, -1030)

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_ep752")
format = 2
layer_0/tile_data = PackedInt32Array(-6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -7, 0, 0, -8, 0, 0, -65530, 0, 0, -65529, 0, 0, -196613, 0, 0, -196612, 0, 0, -262140, 0, 0, -262141, 0, 0, -196599, 0, 0, -196598, 0, 0, -131082, 0, 0, -131083, 0, 0, -196620, 0, 0, -262133, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -196614, 0, 0, -262139, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 4)
zoom = Vector2(0.75, 0.75)
limit_bottom = 0
position_smoothing_enabled = true
script = ExtResource("3_3s4u8")

[node name="DeathArea" type="Area2D" parent="."]
script = ExtResource("4_2irw5")
damage = 9999

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource("WorldBoundaryShape2D_d2w1s")

[connection signal="pressed" from="MasterPopup/CenterContainer/VBoxContainer/JoinServer" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="MasterPopup/CenterContainer/VBoxContainer/CreateServer" to="." method="_on_host_pressed"]
